--- a/src/app/component/status-badge/status-badge.component.html
+++ b/src/app/component/status-badge/status-badge.component.html
@@ -1,6 +1,3 @@
-<span
-  class="text-white text-xs font-semibold px-2 py-1 rounded"
-  [ngClass]="color"
->
+<span class="status-badge" [ngClass]="status.toLowerCase()">
   {{ status }}
 </span>
